--- a/desktop.css
+++ b/desktop.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 :root {
     --primary : #6f85ff;
     --success : #00dd50;
