--- a/mobile.css
+++ b/mobile.css
@@ -1,4 +1,4 @@
-:root {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');:root {
     --primary : #6f85ff;
     --success : #00dd50;
     --danger : #f52d2A;
