--- a/mobile.css
+++ b/mobile.css
@@ -9,3 +9,172 @@
     --text : #e2e2e2;
     --white : #ffffff;
 }
+*{
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    background-color: var(--background-primary);
+    color: var(--text);
+}
+.divider{
+    height: 1px;
+    background-color: var(--white);
+}
+/* AVATARS */
+.avatar{
+    width: 30px;
+}
+.avatar-loggedOut{
+    padding: 3px 4px;
+    border : 1px solid var(--text);
+    border-radius: 100%;
+}
+.profile-icon{
+    width: 18px;
+    height: 18px;
+}
+.avatar-signIN{
+    width: 30px;
+    border-radius: 100%;
+}
+.avatar-text{
+    width: 30px;
+    background-color: chocolate;
+    border-radius: 100%;
+    padding: 6px 0px;
+    font-weight: bold;
+    text-align: center;
+}
+/* ALERTS */
+.alert {
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    text-align: center;
+    margin: 1rem;
+    color: var(--white);
+    font-weight: bold;
+}
+.alert-primary{
+    background-color: var(--primary);
+}
+.alert-success{
+    background-color: var(--success);
+}
+.alert-danger{
+    background-color: var(--danger);
+}
+.alert-warning{
+    background-color: var(--warning);
+    color: black;
+}
+/* BUTTON */
+.btn{
+    padding: 0.4rem 0.6rem;
+    font-weight: bold;
+    font-family: inherit;
+    border-radius: 0.7rem;
+    border-style: none;
+    cursor: pointer;
+    margin: 0.5rem;
+    outline: none;
+}
+.btn-primary{
+    background-color: var(--primary);
+}
+.btn-primary-success{
+    background-color: var(--success);
+}
+.btn-primary-warning{
+    background-color: var(--warning);
+    color: black;
+}
+.btn-primary-danger{
+    background-color: var(--danger);
+}
+.btn-secondary{
+    color: var(--primary);
+    border: 0.5px solid var(--primary);
+}
+.btn-secondary:hover{
+    background-color: var(--primary);
+    color: var(--white);
+}
+.btn-secondary-success{
+    color: var(--success);
+    border: 0.5px solid var(--success);
+}
+.btn-secondary-success:hover{
+    background-color: var(--success);
+    color : var(--white);
+}
+.btn-secondary-warning{
+    color: var(--warning);
+    border: 0.5px solid var(--warning);
+}
+.btn-secondary-warning:hover{
+    background-color: var(--warning);
+    color: black;
+}
+.btn-secondary-danger{
+    color: var(--danger);
+    border: 0.5px solid var(--danger);
+}
+.btn-secondary-danger:hover{
+    background-color: var(--danger);
+    color: white;
+}
+/* LINKS */
+.link{
+    text-decoration: none;
+    cursor: pointer;
+    font-weight: bold;
+    margin: 0.5rem;
+}
+.link-primary{
+    color: var(--danger);
+}
+.link-primary:hover{
+    text-decoration: underline;
+}
+.link-secondary{
+    color: var(--text);
+}
+.link-secondary:hover{
+    text-decoration: underline;
+}
+/* ICONS and FLOATING ACTION BUTTON */
+.floating-action{
+    padding: 0.3rem 0.4rem;
+    border-radius: 100%;
+    border-style: none;
+    background-color: var(--primary);
+    outline: none;
+}
+/* BADGE */
+.badge{
+    background-color: var(--background-gray);
+    font-size: 0.7em;
+}
+.badge-pills{
+    background-color: var(--background-gray);
+    border-radius: 2rem;
+    font-size: 0.7em;
+    padding: 2px 6px;
+}
+.badge-primary{
+    background-color: var(--primary);
+    color: var(--white);
+}
+.badge-success{
+    background-color: var(--success);
+    color : var(--white);
+}
+.badge-warning{
+    background-color: var(--warning);
+    color: black;
+}
+.badge-danger{
+    background-color: var(--danger);
+    color: var(--white);
+}
+/* CARDS*/
