--- a/desktop.css
+++ b/desktop.css
@@ -22,23 +22,16 @@
     .avatar{
         width: 40px;
     }
+    .avatar-2x {
+        width: 45px;
+    }
+    .avatar-3x{
+        width: 55px;
+    }
     .avatar-loggedOut{
         padding: 6px 7px;
         border : 1px solid var(--text);
         border-radius: 100%;
-    }
-    
-    .avatar-signIN{
-        width: 40px;
-        border-radius: 100%;
-    }
-    .avatar-text{
-        width: 40px;
-        background-color: chocolate;
-        border-radius: 100%;
-        padding: 10px 0px;
-        font-weight: bold;
-        text-align: center;
     }
     .profile-icon{
         width: 24px;
@@ -98,4 +91,37 @@
     .badge ,    .badge-pills{
         padding: 2px 5px;
     }
+    /* CARDS*/
+.card{
+    width: 100%;
+    height: auto;
+    margin: 0;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--text);
+}
+.card__img{
+    width: 100%;
+    object-fit: cover;
+}
+.card__header , .card__body {
+    background-color: var(--text);
+    color: var(--background-secondary);
+}
+.card-badge{
+    padding: 0.5rem 1.5rem;
+}
+.card__dismiss{
+    border-style: none;
+    position: absolute;
+    top: 6px;
+    right: 8px;
+    padding: 0.4rem 0.5rem;
+    border-radius: 70%;
+    background-color: var(--white);
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+}
 }
