--- a/desktop.css
+++ b/desktop.css
@@ -88,40 +88,22 @@
         padding: 0.7rem 0.8rem;
     }
     /* BADGE */
-    .badge ,    .badge-pills{
+    .badge ,.badge-pills{
         padding: 2px 5px;
     }
     /* CARDS*/
-.card{
-    width: 100%;
-    height: auto;
-    margin: 0;
-    max-width: 400px;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--text);
-}
-.card__img{
-    width: 100%;
-    object-fit: cover;
-}
-.card__header , .card__body {
-    background-color: var(--text);
-    color: var(--background-secondary);
-}
-.card-badge{
-    padding: 0.5rem 1.5rem;
-}
-.card__dismiss{
-    border-style: none;
-    position: absolute;
-    top: 6px;
-    right: 8px;
-    padding: 0.4rem 0.5rem;
-    border-radius: 70%;
-    background-color: var(--white);
-    color: black;
-    font-weight: bold;
-    cursor: pointer;
-}
+    .card{
+        max-width: 300px;
+        width: 100%;
+        margin: 0;
+    }
+    .card__badge{
+        padding: 0.5rem 1rem;
+    }
+    .card__horizontal{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        max-width: 500px;
+    }
 }
