--- a/mobile.css
+++ b/mobile.css
@@ -13,12 +13,10 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    background-color: var(--background-primary);
-    color: var(--text);
 }
 .divider{
     height: 1px;
-    background-color: var(--white);
+    background-color: var(--background-secondary);
     margin: 0.5rem 0rem;
 }
 /* AVATARS */
@@ -67,9 +65,11 @@
 }
 .btn-primary{
     background-color: var(--primary);
+    color: var(--white);
 }
 .btn-primary-success{
     background-color: var(--success);
+    color: var(--white);
 }
 .btn-primary-warning{
     background-color: var(--warning);
@@ -77,10 +77,12 @@
 }
 .btn-primary-danger{
     background-color: var(--danger);
-}
+    color: var(--white);
+}   
 .btn-secondary{
     color: var(--primary);
     border: 0.5px solid var(--primary);
+    background-color: var(--white);
 }
 .btn-secondary:hover{
     background-color: var(--primary);
@@ -89,6 +91,7 @@
 .btn-secondary-success{
     color: var(--success);
     border: 0.5px solid var(--success);
+    background-color: var(--white);
 }
 .btn-secondary-success:hover{
     background-color: var(--success);
@@ -97,6 +100,7 @@
 .btn-secondary-warning{
     color: var(--warning);
     border: 0.5px solid var(--warning);
+    background-color: var(--white);
 }
 .btn-secondary-warning:hover{
     background-color: var(--warning);
@@ -105,6 +109,7 @@
 .btn-secondary-danger{
     color: var(--danger);
     border: 0.5px solid var(--danger);
+    background-color: var(--white);
 }
 .btn-secondary-danger:hover{
     background-color: var(--danger);
@@ -166,45 +171,55 @@
 }
 /* CARDS*/
 .card{
-    width: 100%;
-    height: auto;
-    margin: auto;
-    max-width: 300px;
     display: flex;
     flex-direction: column;
-    background-color: var(--text);
+    margin: 0rem 0.6rem;
+}
+.card__header{
+    margin: 1rem 0rem;
+}
+.card__body__container{
+    background-color: var(--white);
+}
+.card__body{
+   font-size: 0.9rem;
+   line-height: 1.3; 
+}
+.card__with__badge{
     position: relative;
 }
-.card__img{
-    width: 100%;
-    object-fit: cover;
-}
-.card-badge{
+.card__badge{
     position: absolute;
-    padding: 0.5rem 0.7rem;
-    font-size: 1rem;
-    font-family: inherit;
-    top: 18px;
-    left: 0;
+    top: 10px;
+    left: 0px;
+    padding: 0.5rem 1rem;
 }
-.card__header , .card__text {
-    background-color: var(--text);
-    color: var(--background-secondary);
-    padding: 1rem;
+.card__with__dismiss{
+    position: relative;
 }
 .card__dismiss{
-    border-style: none;
     position: absolute;
-    top: 4px;
+    top: 8px;
     right: 8px;
-    padding: 0.4rem 0.5rem;
-    border-radius: 70%;
+    padding: 4px 6px;
     background-color: var(--white);
-    color: black;
-    font-weight: bold;
+    border-radius: 100%;
+    z-index: 10;
     cursor: pointer;
 }
-.card-dismiss > svg {
-    width: 18px;
-    height: 18px;
+.card__text{
+    max-width: 350px;
+}
+.card__horizontal{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 350px;
+}
+.card__horizontal__img{
+    flex-grow: 2;
+    margin-right: 0.5rem;
+}
+.card__shadow{
+    box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
 }
