--- a/mobile.css
+++ b/mobile.css
@@ -223,3 +223,11 @@
 .card__shadow{
     box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
 }
+/* IMAGES */
+.image__responsive{
+    width: 100%;
+    height: auto;
+}
+.rounded__image{
+    border-radius: 100%;
+}
