--- a/styles.css
+++ b/styles.css
@@ -309,6 +309,7 @@
     left: 3%;
     background-color: var(--white);
     z-index: 10;
+    display: none;
 }
 .modal__header{
     display: flex;
@@ -363,9 +364,9 @@
 .snackbar{
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 0.5rem;
     align-items: center;
-    width: 300px;
+    max-width: 220px;
     font-weight: bold;
 }
 .snackbar__primary{
@@ -375,4 +376,169 @@
     background-color: var(--background-gray);
     color: var(--text);
     color: orange;
+}
+.close__snackbar{
+    cursor: pointer;
+}
+@media screen and (min-width : 768px) {
+    /* ALERT */
+    .alert{
+        width: 45%;
+        margin: auto;
+        margin-bottom: 1rem;
+    }
+    /*AVATAR */
+    .avatar{
+        width: 40px;
+    }
+    .avatar-2x {
+        width: 45px;
+    }
+    .avatar-3x{
+        width: 55px;
+    }
+    .avatar-loggedOut{
+        padding: 6px 7px;
+        border : 1px solid var(--text);
+        border-radius: 100%;
+    }
+    .profile-icon{
+        width: 24px;
+        height: 24px;
+    }
+    /* BUTTONS */
+    .btn{
+        padding: 0.6rem 1rem;
+        font-weight: bold;
+        font-family: inherit;
+        border-radius: 0.7rem;
+        border-style: none;
+        cursor: pointer;
+        outline: none;
+    }
+    .btn-secondary{
+        color: var(--primary);
+        border: 0.5px solid var(--primary);
+    }
+    .btn-secondary:hover{
+        background-color: var(--primary);
+        color: var(--white);
+    }
+    .btn-secondary-success{
+        color: var(--success);
+        border: 0.5px solid var(--success);
+    }
+    .btn-secondary-success:hover{
+        background-color: var(--success);
+        color : var(--white);
+    }
+    .btn-secondary-warning{
+        color: var(--warning);
+        border: 0.5px solid var(--warning);
+    }
+    .btn-secondary-warning:hover{
+        background-color: var(--warning);
+        color: black;
+    }
+    .btn-secondary-danger{
+        color: var(--danger);
+        border: 0.5px solid var(--danger);
+    }
+    .btn-secondary-danger:hover{
+        background-color: var(--danger);
+        color: white;
+    }
+    /* LINKS */
+    .link{
+        margin: 1rem;
+    }
+    /*  ICONS and FLOATING ACTION BUTTON*/
+    .floating-action{
+        padding: 0.7rem 0.8rem;
+    }
+    /* BADGE */
+    .badge ,.badge-pills{
+        padding: 2px 5px;
+    }
+    /* CARDS*/
+    .card{
+        max-width: 300px;
+        width: 100%;
+        margin: 0;
+    }
+    .card__badge{
+        padding: 0.5rem 1rem;
+    }
+    .card__horizontal{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        max-width: 500px;
+    }
+    /* NAVIGATION */
+    .navbar{
+        padding: 2rem 5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: var(--text);
+    }
+    .navbrand__head{
+        text-decoration: none;
+        color: inherit;
+    }
+    .nav__pills{
+        margin-left: 3rem;
+        text-decoration: none;
+        color: inherit;
+    }
+    /* MODAL */
+    .modal{
+        max-width: 560px;
+        position: fixed;
+        top: 30%;
+        left: 30%;
+    }
+    /* GRID */
+    .grid__row__4{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .grid__col__4{
+        border: 0.5px solid black;
+    }
+    .grid__row__6{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .grid__col__6{
+        border: 0.5px solid black;
+    }
+    /* SNACKBAR */
+    .snackbar{
+        max-width: 400px;
+        padding: 1rem;
+    }
+}
+@media screen and (max-width : 769px){
+    .modal{
+        left: 15%;
+    }
+}
+@media screen and (max-width : 426px){
+    .modal{
+        left: 3%;
+    }
+}
+@media screen and (max-width : 376px){
+    .modal{
+        max-width: 350px;
+        left: 3%;
+    }
+}
+@media screen and (max-width : 321px){
+    .modal{
+        max-width: 300px;
+        left: 3%;
+    }
 }
