minor css changes

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     --text : #e2e2e2;
     --white : #ffffff;
     --floating : #1de5ce;
-    --snackbar-secondary : orange;
+    --orange : orange;
     --text-muted : rgb(161, 161, 161);
     --black : black;
     --off-white : #d2c9c9;
@@ -429,7 +429,7 @@
 .snackbar__secondary{
     background-color: var(--background-gray);
     color: var(--text);
-    color: var(--snackbar-secondary);
+    color: var(--orange);
 }
 .close__snackbar{
     cursor: pointer;
