--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,7 @@
     border-color: var(--background-secondary);  
     width: 100%;
     transition: all 0.25s ease-out;
+    background-color: transparent;
 }
 .inputText:focus{
     border-color: var(--primary);
@@ -284,6 +285,7 @@
     border-color: var(--background-secondary);
     resize: none;
     transition: all 0.25s ease-out;
+    background-color: transparent;
 }
 .input-textArea:focus{
     border-color: var(--primary);
