--- a/styles.css
+++ b/styles.css
@@ -270,6 +270,7 @@
     width: 100%;
     transition: all 0.25s ease-out;
     background-color: transparent;
+    color: var(--text);
 }
 .inputText:focus{
     border-color: var(--primary);
@@ -286,6 +287,7 @@
     resize: none;
     transition: all 0.25s ease-out;
     background-color: transparent;
+    color: var(--text);
 }
 .input-textArea:focus{
     border-color: var(--primary);
