--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@
     border-right-style: none;
     border-left-style: none;
     outline: none;
-    border-color: var(--background-secondary);  
+    border-color: var(--white);  
     width: 100%;
     transition: all 0.25s ease-out;
     background-color: transparent;
@@ -283,7 +283,7 @@
     border-right-style: none;
     border-left-style: none;
     outline: none;
-    border-color: var(--background-secondary);
+    border-color: var(--white);
     resize: none;
     transition: all 0.25s ease-out;
     background-color: transparent;
