--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@
 .btn-secondary{
     color: var(--primary);
     border: 0.5px solid var(--primary);
-    background-color: var(--white);
+    background-color: transparent;
 }
 .btn-secondary:hover{
     background-color: var(--primary);
@@ -96,7 +96,7 @@
 .btn-secondary-success{
     color: var(--success);
     border: 0.5px solid var(--success);
-    background-color: var(--white);
+    background-color: transparent;
 }
 .btn-secondary-success:hover{
     background-color: var(--success);
@@ -105,7 +105,8 @@
 .btn-secondary-warning{
     color: var(--warning);
     border: 0.5px solid var(--warning);
-    background-color: var(--white);
+    background-color: transparent;
+
 }
 .btn-secondary-warning:hover{
     background-color: var(--warning);
@@ -114,7 +115,7 @@
 .btn-secondary-danger{
     color: var(--danger);
     border: 0.5px solid var(--danger);
-    background-color: var(--white);
+    background-color: transparent;
 }
 .btn-secondary-danger:hover{
     background-color: var(--danger);
@@ -210,10 +211,14 @@
 }
 .card__body__container{
     background-color: var(--white);
+    padding: 0rem 0.5rem;
 }
 .card__body{
    font-size: 0.9rem;
    line-height: 1.3; 
+}
+.card__horizontal__header{
+    margin: 0.5rem 0rem;
 }
 .card__with__badge{
     position: relative;
@@ -257,7 +262,9 @@
     height: auto;
 }
 .rounded__image{
-    border-radius: 50%;
+    width: 240px;
+    height: 240px;
+    border-radius: 100%;
 }
 /* INPUT */
 .inputText{
@@ -266,11 +273,9 @@
     border-right-style: none;
     border-left-style: none;
     outline: none;
-    border-color: var(--white);  
+    border-color: var(--background-secondary);  
     width: 100%;
     transition: all 0.25s ease-out;
-    background-color: transparent;
-    color: var(--text);
 }
 .inputText:focus{
     border-color: var(--primary);
@@ -283,11 +288,9 @@
     border-right-style: none;
     border-left-style: none;
     outline: none;
-    border-color: var(--white);
+    border-color: var(--background-secondary);
     resize: none;
     transition: all 0.25s ease-out;
-    background-color: transparent;
-    color: var(--text);
 }
 .input-textArea:focus{
     border-color: var(--primary);
