--- a/styles.css
+++ b/styles.css
@@ -216,6 +216,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    justify-content: space-between;
 }
 .card__header{
     margin: 1rem 0rem;
