--- a/styles.css
+++ b/styles.css
@@ -220,11 +220,13 @@
 }
 .card__header{
     margin: 1rem 0rem;
-    flex-grow: 2;
 }
 .card__body__container{
     background-color: var(--white);
     padding: 0.5rem;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
 .card__body{
    font-size: 0.9rem;
